--- a/style.css
+++ b/style.css
@@ -39,6 +39,8 @@
     width: 100%;
     display: flex;
     position: relative;
+    align-items: center;
+
 }
 .left{
     height: 100%;
@@ -66,6 +68,7 @@ button{
     font-size: 1.2em;
     padding: 8px 18px;
     margin-left: 30px;
+    border: 2px solid black;
     border-radius: 10px;
     margin-bottom: 20px;
 }
@@ -121,7 +124,7 @@ button:hover{
     }
     .right img{
         padding-bottom: 20px;
-        margin: 0 10px;
+        margin: 0 15px;
     }
 
     
