--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: cursive;
+    font-family: "Poppins", sans-serif;
+
+    
 
 }
 .box{
@@ -125,6 +128,10 @@ button:hover{
     .right img{
         padding-bottom: 20px;
         margin: 0 15px;
+    }
+    button{
+        font-size: 1.3em;
+        font-weight: 500;
     }
 
     
