--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
     width: 100%;
     display: flex;
     position: relative;
-    align-items: center;
+
 
 }
 .left{
@@ -88,12 +88,12 @@ button:hover{
 }
 .right img{
     height: 100%;
-    width: 100%;
+    width: 400px;
     border-radius: 10px;
 
 }
     
-@media (min-width:200px)and (max-width:680px) {
+@media  (max-width:680px) {
     .nav{
         width: 100%;
         height: 70px;
@@ -108,6 +108,9 @@ button:hover{
     }
     .content{
         flex-direction: column;
+        margin: 0 15px;
+        padding: 1px 10px;
+        align-items: center;
 
     }
     .left{
@@ -126,8 +129,10 @@ button:hover{
         width: 100%;
     }
     .right img{
+        width:330px;
+        height:350px;
         padding-bottom: 20px;
-        margin: 0 15px;
+        margin-right: 15px;
     }
     button{
         font-size: 1.3em;
