--- a/style.css
+++ b/style.css
@@ -74,30 +74,32 @@ button{
     border: 2px solid black;
     border-radius: 10px;
     margin-bottom: 20px;
-}
-button:hover{
-    background-color:rgb(92, 168, 168);
-    color: white;
-    transition: 0.3s ease-in-out;
     cursor: pointer;
 }
+
 .right{
     height: 100%;
     width: 55%;
     
 }
 .right img{
+    width: 100%;
     height: 100%;
-    width: 400px;
     border-radius: 10px;
 
 }
     
 @media  (max-width:680px) {
+    .content{
+        flex-direction: column;
+        padding: 10px;
+    }
+    
     .nav{
         width: 100%;
-        height: 70px;
+        height: 80px;
         background-color: burlywood;
+        padding: 20px;
     }
     .nav h1{
         font-size: 2.5em;
@@ -106,15 +108,9 @@ button:hover{
     .nav h3{
         display: none;
     }
-    .content{
-        flex-direction: column;
-        margin: 0 15px;
-        padding: 1px 10px;
-        align-items: center;
 
-    }
     .left{
-        width: 100%;
+        width:100%;
     }
     .left h2{
         font-size:1.9em ;
@@ -127,12 +123,12 @@ button:hover{
     }
     .right{
         width: 100%;
+        padding-bottom:20px;
     }
     .right img{
-        width:330px;
-        height:350px;
-        padding-bottom: 20px;
-        margin-right: 15px;
+        width:100%;
+        height:100%;
+        background-size: cover;
     }
     button{
         font-size: 1.3em;
